<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#049C4C"
    tools:context=".PengajuanKP">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="276dp"
        android:layout_height="570dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/kotak"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UtamaPengajuanKP">

        <TextView
            android:id="@+id/OtherPengajuanKP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="2dp"
            android:text="@string/lengkapi_formulir_berikut"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/JudulPengajuanKP" />

        <Button
            android:id="@+id/SubmitAjukanKP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="93dp"
            android:backgroundTint="#049C4C"
            android:text="@string/submit"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText9"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/JudulPengajuanKP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="35dp"
            android:text="@string/pengajuan_kerja_praktek"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="78dp"
            android:hint="@string/nama_ketua"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OtherPengajuanKP" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="@string/nama_anggota"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="Instansi Kerja Praktek"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText6"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="Bidang Kerja Praktek"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText7"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="@string/bidang_kerja_praktek"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText8"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="@string/rencana_pelaksanaan_kp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText9"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="78dp"
            android:hint="@string/rumusan_masalah_kp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/UtamaPengajuanKP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pengajuan_kp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>